current version; message generated automatically on: Linux nl6 (brandenb)

--- a/doc/citations/ref.bib
+++ b/doc/citations/ref.bib
@@ -16150,7 +16150,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2024OJAp....7E..75D,
        author = {{Dwivedi}, Shreya and {Anandavijayan}, Chandranathan and {Bhat}, Pallavi},
         title = "{Quasi-two-dimensionality of three-dimensional, magnetically dominated, decaying turbulence}",
-      journal = {The Open Journal of Astrophysics},
+      journal = {Open J. Astrophys.},
      keywords = {Astrophysics - High Energy Astrophysical Phenomena, Physics - Fluid Dynamics, Physics - Plasma Physics},
          year = 2024,
         month = sep,
@@ -16268,7 +16268,7 @@ archivePrefix = {arXiv},
 
 @ARTICLE{2025PhRvD.111b3021P,
        author = {{Park}, Kiwan},
-        title = "{Effect of turbulent kinetic helicity on diffusive <inline-formula><mml:math display=``inline''><mml:mi>{\ensuremath{\beta}}</mml:mi></mml:math></inline-formula> effect for large scale dynamo}",
+        title = "{Effect of turbulent kinetic helicity on diffusive $\beta$ effect for large scale dynamo}",
       journal = {\prd},
      keywords = {Astrophysics and astroparticle physics},
          year = 2025,
@@ -16485,7 +16485,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2025JApA...46...28S,
        author = {{Sharma}, Prateek and {Vaidya}, Bhargav and {Wadadekar}, Yogesh and {Bagla}, Jasjeet and {Chatterjee}, Piyali and {Hanasoge}, Shravan and {Kumar}, Prayush and {Mukherjee}, Dipanjan and {Philip}, Ninan Sajeeth and {Singh}, Nishant},
         title = "{Computational astrophysics, data science and AI/ML in astronomy: A perspective from Indian community}",
-      journal = {Journal of Astrophysics and Astronomy},
+      journal = {J. Astrophys. Astron.},
      keywords = {High performance computing, AI/ML in astronomy, Indian astronomy, Information and Computing Sciences, Artificial Intelligence and Image Processing, Astrophysics - Instrumentation and Methods for Astrophysics},
          year = 2025,
         month = may,
@@ -16701,7 +16701,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2025CoFl..27313903Y,
        author = {{Yuvraj} and {Im}, Hong G. and {Chaudhuri}, Swetaprovo},
         title = "{How ``mixing'' affects propagation and structure of intensely turbulent, lean, hydrogen-air premixed flames}",
-      journal = {Combustion and Flame},
+      journal = {Combust. Flame},
      keywords = {Flame displacement speed, Turbulent premixed flames, Lean hydrogen flames, Flame{\textendash}flame interaction, Physics - Fluid Dynamics},
          year = 2025,
         month = mar,
@@ -16755,7 +16755,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2025JPlPh..91E..35H,
        author = {{Hosking}, D.~N. and {Wasserman}, D. and {Cowley}, S.~C.},
         title = "{Metastability of stratified magnetohydrostatic equilibria and their relaxation}",
-      journal = {Journal of Plasma Physics},
+      journal = {J. Plasma Phys.},
      keywords = {plasma nonlinear phenomena, plasma instabilities, Astrophysics - High Energy Astrophysical Phenomena, Physics - Fluid Dynamics, Physics - Plasma Physics},
          year = 2025,
         month = feb,
