--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -9561,7 +9561,98 @@ Here are some settings from wd's \file[.emacs]{\~{}/.emacs} file:
 When implementing IF or SELECT blocks always write
 code for all cases -- including the default or else case.
 This should be done even when that code is only a call to
-raise an error that the case should not ha, \var[initpower2]{initpower2=-5/3}, corresponding to a
+raise an error that the case should not have been reached.
+If you see a missing case anywhere then do add it.  These
+failsafes are essential in a large multi-purpose multi-user
+code like the {\sc Pencil Code}.
+
+If a case is supposed to do nothing and it may be unclear that the
+coder has recognized this fact then make it explicit by adding the
+default case with a comment like\\
+\code{! Do Nothing}.
+The compiler will clean away any such empty blocks.
+
+\subsection{General changes to the code}
+\index{Changes}
+
+It is sometimes necessary to do major changes to the code.
+Since this may affect many people and may even be controversial
+among the developers, such changes are restricted to the time
+of the next Pencil Code User Meeting.
+Such meetings are advertised on \url{http://www.nordita.org/software/pencil-code/}
+under the news section.
+Notes about previous such meetings can be found under
+\url{http://www.nordita.org/software/pencil-code/UserMeetings/}.
+
+Major changes can affect those developers who have not checked in
+their latest changes for some time.
+Before doing such changes it is therefore useful to contact the people
+who have contributed to the latest developments on that module.
+If it is not functional or otherwise in bad shape, it should be
+moved to \file{experimental}, i.e.\ one says
+\code{svn mv file.f90 experimental/file.f90}.
+However, any such directory change constitutes a major change in
+itself and should be performed in agreement with those involved in
+the development.
+Otherwise any file that has been changed in the mean time will end up
+being outside revision control, which is to be avoided at all cost.
+
+% ====================================================================== %
+
+\section{Some specific initial conditions}
+\index{Initial conditions}
+
+\subsection{Random velocity or magnetic fields}
+
+Obtained with \code{inituu='gaussian-noise'}
+(or \code{initaa='gaussian-noise'}).
+The vector $\uv$ (or $\Av$) is set to normally distributed, uncorrelated random
+numbers in all meshpoints for all three components.
+The power spectrum of
+$\uv$ ($\Av$) increases then quadratically with wavenumber $k$ (without cutoff)
+and the power spectrum of $\omv$ (or $\Bv$) increases like $k^4$.
+
+Note that a random initial condition contains significant power at the
+Nyquist wavenumber $k_{\rm Ny}=\pi/\delta x$, where $\delta x$ is the mesh 
+spacing. In a decay calculation, because of the discretization error,
+such power decays slower than it ought to; see Fig.~\ref{ppowercomp2},
+where we show the evolution for a random initial velocity field for $64^3$
+meshpoints, $\nu=5\times10^{-2}$ (fairly large!), and \code{nfilter=30}.
+
+It is clearly a good idea to filter the initial condition to prevent
+excess power at $k_{\rm Ny}$. On the other hand, such excess power is
+weak by comparison with the power at the energy carrying scale, so one
+does not see it in visualizations in real space. Furthermore, as seen
+from Fig.~\ref{ppowercomp2}, for $k<k_{\rm Ny}/2$ the power spectra for
+filtered and unfiltered initial conditions is almost the same.
+
+% ---------------------------------------------------------------------- %
+\begin{figure}[hbtp]
+  \centering
+  \includegraphics%
+    [width=0.8\textwidth,keepaspectratio]%
+    {ppowercomp2}
+  \caption{Velocity power spectra at three different times
+    with and without filtering of the initial condition.
+  }
+  \label{ppowercomp2}
+\end{figure}
+% ---------------------------------------------------------------------- %
+
+\subsection{Turbulent initial with given spectrum}
+
+The most general procedure for producing an initial condition
+with a turbulent spectrum is \code{inituu='power_randomphase_hel'},
+which allows one to set two different slopes, together with an
+exponential cutoff as well as a Gaussian peak within the spectrum.
+By default, the field is solenoidal unless one puts
+\code{lskip_projection=.true.} and can have fractional helicity
+by setting \code{relhel_uu} to a value between $-1$ and $1$.
+By default it is $0$, which means it is nonhelical.
+
+The spectral indices \var{initpower} and \var{initpower2} refer to
+energy spectral indices.
+By default, \var[initpower2]{initpower2=-5/3}, corresponding to a
 Kolmogorov spectrum.
 For a delta-correlated spectrum, we have to put
 \var[initpower]{initpower=2},
