cparam.f90: added linactive_dimension = (/ nxgrid == 1, nygrid == 1, nzgrid == 1 /) forcing.f90: possibility to escape lactive_dimension(j) magnetic/meanfield.f90: possibility to include nmultipole (=1 or 2) power_spectrum.f90: started coding 2-D pdf special/README: mention Early Universe Cosmology special/chiral_mhd.f90: added Murman's settings for smooth_source

--- a/src/special/README
+++ b/src/special/README
@@ -36,6 +36,18 @@ Accretion Disks:
   baroclinic_run.f90
   fargo.f90
 
+Early Universe Cosmology:
+  backreact_infl.f90
+  chiral_mhd.f90
+  disp_current.f90
+  gravitational_waves_hTXk.f90
+
+to clean up modifications due to use of multiple special models, do:
+  pc_mkspecial.sh backreact_infl.f90
+  pc_mkspecial.sh chiral_mhd.f90
+  pc_mkspecial.sh disp_current.f90
+  pc_mkspecial.sh gravitational_waves_hTXk.f90
+
 Meanfield MHD:
   meanfield_alpm_alternate.f90
   meanfield_alpm_etat.f90
