current version; message generated automatically on: Linux norlx65 (brandenb)

--- a/doc/citations/ref.bib
+++ b/doc/citations/ref.bib
@@ -16790,3 +16790,139 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{2025arXiv250708436L,
+       author = {{Lebreuilly}, Ugo and {Traficante}, Alessio and {Nucara}, Alice and {Tung}, Ngo-Duy and {Hennebelle}, Patrick and {Molinari}, Sergio and {Klessen}, Ralf S. and {Testi}, Leonardo and {Pelkonen}, Veli-Matti and {Benedettini}, Milena and {Coletta}, Alessandro and {Elia}, Davide and {Mininni}, Chiara and {Pezzuto}, Stefania and {Soler}, Juan D. and {Suin}, Paolo and {Toci}, Claudia},
+        title = "{The Rosetta Stone Project. I. A suite of radiative magnetohydrodynamics simulations of high-mass star-forming clumps}",
+      journal = {arXiv e-prints},
+     keywords = {Solar and Stellar Astrophysics, Astrophysics of Galaxies, Instrumentation and Methods for Astrophysics},
+         year = 2025,
+        month = jul,
+          eid = {arXiv:2507.08436},
+        pages = {arXiv:2507.08436},
+          doi = {10.48550/arXiv.2507.08436},
+archivePrefix = {arXiv},
+       eprint = {2507.08436},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250708436L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025PhFl...37g5107S,
+       author = {{Sabelnikov}, Vladimir A. and {Nishiki}, Shinnosike and {Lipatnikov}, Andrei N.},
+        title = "{A priori assessment of gradient models of joint cumulants for large eddy simulations of premixed turbulent flames}",
+      journal = {Physics of Fluids},
+     keywords = {Turbulent Flows},
+         year = 2025,
+        month = jul,
+       volume = {37},
+       number = {7},
+          eid = {075107},
+        pages = {075107},
+          doi = {10.1063/5.0268258},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025PhFl...37g5107S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025MNRAS.tmp.1134S,
+       author = {{Shchutskyi}, Nikyta and {Schaller}, Matthieu and {Karapiperis}, Orestis A. and {Stasyszyn}, Federico A. and {Brandenburg}, Axel},
+        title = "{Kinematic dynamos and resolution limits for Smoothed Particle Magnetohydrodynamics}",
+      journal = {\mnras},
+     keywords = {Cosmology and Nongalactic Astrophysics, Computational Physics},
+         year = 2025,
+        month = jul,
+          doi = {10.1093/mnras/staf1180},
+archivePrefix = {arXiv},
+       eprint = {2505.13305},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025MNRAS.tmp.1134S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025A&A...699A.250H,
+       author = {{Hidalgo}, J.~P. and {K{\"a}pyl{\"a}}, P.~J. and {Schleicher}, D.~R.~G. and {Ortiz-Rodr{\'\i}guez}, C.~A. and {Navarrete}, F.~H.},
+        title = "{Shaping core dynamos in A-type stars: The role of dipolar fossil fields}",
+      journal = {\aap},
+     keywords = {dynamo, magnetohydrodynamics (MHD), stars: early-type, stars: magnetic field, Solar and Stellar Astrophysics, Plasma Physics},
+         year = 2025,
+        month = jul,
+       volume = {699},
+          eid = {A250},
+        pages = {A250},
+          doi = {10.1051/0004-6361/202555151},
+archivePrefix = {arXiv},
+       eprint = {2506.01017},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025A&A...699A.250H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv250621517S,
+       author = {{Srivastava}, Sankalp and {Chatterjee}, Piyali and {Dey}, Sahel and {Erd{\'e}lyi}, Robertus},
+        title = "{The Relation between Solar Spicules and Magnetohydrodynamic Shocks}",
+      journal = {arXiv e-prints},
+     keywords = {Solar and Stellar Astrophysics},
+         year = 2025,
+        month = jun,
+          eid = {arXiv:2506.21517},
+        pages = {arXiv:2506.21517},
+          doi = {10.48550/arXiv.2506.21517},
+archivePrefix = {arXiv},
+       eprint = {2506.21517},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250621517S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv250620538I,
+       author = {{Iarygina}, Oksana and {Sfakianakis}, Evangelos I. and {Brandenburg}, Axel},
+        title = "{Schwinger effect in axion inflation on a lattice}",
+      journal = {arXiv e-prints},
+     keywords = {Cosmology and Nongalactic Astrophysics, High Energy Physics - Phenomenology, High Energy Physics - Theory},
+         year = 2025,
+        month = jun,
+          eid = {arXiv:2506.20538},
+        pages = {arXiv:2506.20538},
+          doi = {10.48550/arXiv.2506.20538},
+archivePrefix = {arXiv},
+       eprint = {2506.20538},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250620538I},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025ApJS..279....6H,
+       author = {{Hunana}, P.},
+        title = "{Generalized Fluid Models of the Braginskii Type. II. The Boltzmann Operator}",
+      journal = {\apjs},
+     keywords = {Collisional processes, Plasma physics, Space plasmas, 2286, 2089, 1544, Plasma Physics, Solar and Stellar Astrophysics, Nuclear Theory},
+         year = 2025,
+        month = jul,
+       volume = {279},
+       number = {1},
+          eid = {6},
+        pages = {6},
+          doi = {10.3847/1538-4365/adb1d8},
+archivePrefix = {arXiv},
+       eprint = {2406.00467},
+ primaryClass = {physics.plasm-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJS..279....6H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv250610435G,
+       author = {{Godines}, Daniel and {Lyra}, Wladimir and {Ricci}, Luca and {Yang}, Chao-Chin and {Simon}, Jacob B. and {Lim}, Jeonghoon and {Carrera}, Daniel},
+        title = "{On the Mass Budget Problem of Protoplanetary Disks: Streaming Instability and Optically Thick Emission}",
+      journal = {arXiv e-prints},
+     keywords = {Earth and Planetary Astrophysics},
+         year = 2025,
+        month = jun,
+          eid = {arXiv:2506.10435},
+        pages = {arXiv:2506.10435},
+          doi = {10.48550/arXiv.2506.10435},
+archivePrefix = {arXiv},
+       eprint = {2506.10435},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250610435G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
