--- a/doc/citations/notes.tex
+++ b/doc/citations/notes.tex
@@ -126,6 +126,12 @@ In addition, 138 papers reference it for code comparison or other purposes %(202
 \begin{description}
 \item %YEAR
 2 times in 2025 \citep{
+2025arXiv250610435G,%Godines+ "On the Mass Budget Problem of Protoplanetary Disks: Streaming Instability and Optically Thick Emission"
+2025arXiv250620538I,%Iarygina+ "Schwinger effect in axion inflation on a lattice"
+2025arXiv250621517S,%Srivastava+ "The Relation between Solar Spicules and Magnetohydrodynamic Shocks"
+2025A&A...699A.250H,%Hidalgo+ "Shaping core dynamos in A-type stars: The role of dipolar fossil fields"
+2025MNRAS.tmp.1134S,%Shchutskyi+ "Kinematic dynamos and resolution limits for Smoothed Particle Magnetohydrodynamics"
+2025PhFl...37g5107S,%Sabelnikov+ "A priori assessment of gradient models of joint cumulants for large eddy simulations of premixed turbulent flames"
 2025ApJ...979L..39T,%Tschernitz+Bourdin "Granulation and Convectional Driving on Stellar Surfaces"
 2025JPlPh..91E..35H,%Hosking+ "Metastability of stratified magnetohydrostatic equilibria and their relaxation"
 2025CoFl..27313903Y,%Yuvraj+ "How ``mixing'' affects propagation and structure of intensely turbulent, lean, hydrogen-air premixed flames"
@@ -144,7 +150,6 @@ In addition, 138 papers reference it for code comparison or other purposes %(202
 2025arXiv250513305S,%Shchutskyi+ "Kinematic dynamos and resolution limits for Smoothed Particle Magnetohydrodynamics"
 2025MNRAS.539.3421R,%Rice+ "Dust density enhancements and the direct formation of planetary cores in gravitationally unstable discs"
 2025MNRAS.540..532Q,%Qazi "Non-linear magnetic buoyancy instability and galactic dynamos"
-2025arXiv250601017H,%Hidalgo "Shaping core dynamos in A-type stars: The role of dipolar fossil fields"
 2025A&A...693A..89P,%Pandey+Bourdin "Investigating numerical stability by scaling heat conduction in a 1D hydrodynamic model of the solar atmosphere"
 2025AAS...24540206M,%Meftah "Hydrodynamic simulations of multiple low-mass migrating black holes in AGN disks"
 2025PhRvD.111b3021P,%Park "Effect of turbulent kinetic helicity on diffusive beta effect for large scale dynamo"
@@ -1077,6 +1082,7 @@ The {\sc Pencil Code} has been used for the following research topics
 
 \item %GW & G W & g r a v i  w a v e s
 {\em Relic gravitational waves \& axions} \citep{
+2025arXiv250620538I,%Iarygina+ "Schwinger effect in axion inflation on a lattice"
 2025JCAP...05..079S,%Sharma+ "Lattice simulations of axion-U(1) inflation: gravitational waves, magnetic fields, and black holes"
 2024PhRvD.109d3534B,%Brandenburg "Relic Gravitational Waves from the Chiral Plasma Instability in the Standard Cosmological Model"
 2024JCAP...12..057B,%Brandenburg+ "Magnetogenesis from axion-SU(2) inflation"
@@ -1240,6 +1246,7 @@ The {\sc Pencil Code} has been used for the following research topics
 \begin{enumerate}
 \item %m r i
 {\em Accretion discs and shear flows} \citep{
+2025arXiv250610435G,%Godines+ "On the Mass Budget Problem of Protoplanetary Disks: Streaming Instability and Optically Thick Emission"
 2025AAS...24540206M,%Meftah "Hydrodynamic simulations of multiple low-mass migrating black holes in AGN disks"
 2024ApJ...970L..19L,%Lyra+ "Rapid Protoplanet Formation in Vortices: Three-dimensional Local Simulations with Self-gravity"
 2024ApJ...966...90S,%Sengupta+ "Length and Velocity Scales in Protoplanetary Disk Turbulence"
@@ -1305,6 +1312,7 @@ The {\sc Pencil Code} has been used for the following research topics
 \begin{enumerate}
 \item % c o r
 {\em Coronal heating and coronal mass ejections} \citep{
+2025arXiv250621517S,%Srivastava+ "The Relation between Solar Spicules and Magnetohydrodynamic Shocks"
 2025arXiv250217178K,%Kishore+Singh "Rotational effects on the small-scale dynamo"
 2025arXiv250303332K,%Kishore+Singh "The spectra of solar magnetic energy and helicity"
 2025ApJ...984..113S,%Singh+Arunima "Reversals of toroidal magnetic field in local shearing box simulations of accretion disc with a hot corona"
@@ -1362,13 +1370,14 @@ The {\sc Pencil Code} has been used for the following research topics
 
 \item %h e l
 {\em Large-scale dynamos, helical turbulence, and catastrophic quenching} \citep{
+2025MNRAS.tmp.1134S,%Shchutskyi+ "Kinematic dynamos and resolution limits for Smoothed Particle Magnetohydrodynamics"
 2025arXiv250416849B,%Brandenburg "Magnetorotational instability in a solar mean-field dynamo"
 2025ApJ...984...78B,%Brandenburg+Vishniac "Magnetic helicity fluxes in dynamos from rotating inhomogeneous turbulence"
 2025ApJ...985...18R,%Rogachevskii+ "Theory of the Kinetic Helicity Effect on Turbulent Diffusion of Magnetic and Scalar Fields"
 2025ApJ...984...88B,%Brandenburg+ "Helicity Effect on Turbulent Passive and Active Scalar Diffusivities"
 2025arXiv250503660M,%Mondal+ "Understanding large-scale dynamos in unstratified rotating shear flows"
 2025arXiv250513305S,%Shchutskyi+ "Kinematic dynamos and resolution limits for Smoothed Particle Magnetohydrodynamics"
-2025arXiv250601017H,%Hidalgo "Shaping core dynamos in A-type stars: The role of dipolar fossil fields"
+2025A&A...699A.250H,%Hidalgo+ "Shaping core dynamos in A-type stars: The role of dipolar fossil fields"
 2024arXiv241112953Z,%Zhou+Lai "Understanding the UV/Optical Variability of AGNs through Quasi-Periodic Large-scale Magnetic Dynamos"
 2024SoPh..299..115V,%Vashishth "Hysteresis Near the Transition of the Large-Scale Dynamo in the Presence of the Small-Scale Dynamo"
 2024PhRvE.109a5206Z,%Zhou+Blackman "Helical dynamo growth and saturation at modest versus extreme magnetic Reynolds numbers"
@@ -1738,6 +1747,7 @@ Peng2019HelicityHT,%Peng+ "Helicity hardens the gas"
 %c o m b
 \item
 {\em Turbulent combustion, front propagation, radiation \& ionization} \citep{
+2025PhFl...37g5107S,%Sabelnikov+ "A priori assessment of gradient models of joint cumulants for large eddy simulations of premixed turbulent flames"
 2025CoFl..27313903Y,%Yuvraj+ "How ``mixing'' affects propagation and structure of intensely turbulent, lean, hydrogen-air premixed flames"
 2024arXiv240807668L,%Lipatnikov "Towards large eddy simulations of premixed turbulent flames without a combustion model}",
 2024PComI..4005315W,%Wang+ "Particle-resolved numerical simulations of char particle combustion in isotropic turbulence"
@@ -1785,6 +1795,8 @@ Zhang_etal_2020comb,%Zhang+ "Drag force for a burning particle"
 The {\sc Pencil Code} has been quoted in other papers either for
 detailed code comparison, in connection with related work,
 or in comparison with other codes \citep{
+2025ApJS..279....6H,%Hunana "Generalized Fluid Models of the Braginskii Type. II. The Boltzmann Operator"
+2025arXiv250708436L,%Lebreuilly+ "The Rosetta Stone Project. I. A suite of radiative magnetohydrodynamics simulations of high-mass star-forming clumps"
 2025arXiv250319131I,%Irshad "Turbulent dynamos in a collapsing cloud"
 2025ApJS..277...46S,%Son+ "A Comparative Analysis of High-resolution Shock-capturing Schemes for Two-dimensional Magnetohydrodynamic Simulation of Flux Emergence in the Solar Atmosphere"
 2025JApA...46...28S,%Sharma+ "Computational astrophysics, data science and AI/ML in astronomy: A perspective from Indian community"
