--- a/doc/citations/notes.tex
+++ b/doc/citations/notes.tex
@@ -125,7 +125,9 @@ In addition, 138 papers reference it for code comparison or other purposes %(202
 % WO=without Brandenburg, COM=code comparison papers
 \begin{description}
 \item %YEAR
-2 times in 2025 \citep{
+33 times in 2025 \citep{
+2025arXiv250721832K,%Koshikumo+ "Magnetic flux transport via reconnection diffusion in different sonic regimes of interstellar MHD turbulence"
+2025PhRvD.111d3541V,%Vachaspati+Brandenburg "Spectra of magnetic fields from electroweak symmetry breaking"
 2025arXiv250610435G,%Godines+ "On the Mass Budget Problem of Protoplanetary Disks: Streaming Instability and Optically Thick Emission"
 2025arXiv250620538I,%Iarygina+ "Schwinger effect in axion inflation on a lattice"
 2025arXiv250621517S,%Srivastava+ "The Relation between Solar Spicules and Magnetohydrodynamic Shocks"
@@ -159,10 +161,10 @@ In addition, 138 papers reference it for code comparison or other purposes %(202
 2025A&A...694A..39D,%Dehman+Brandenburg "Reality of Inverse Cascading in Neutron Star Crusts"
 2025MNRAS.536.1625S%Shi+ "Kinetic field theory applied to planetesimal formation I: freely streaming dust particles"
 }, \item %YEAR
-46 times in 2024 \citep{
+40 times in 2024 \citep{
+2024GMS...283..179C,%Candelaresi+Del Sordo "Stability of plasmas through magnetic helicity"
 BB24,
 2024AGUFMSH13B2928M,%Maity+ "On the Evolution of Reconnection Flux in Erupting Magnetic Flux Ropes: Insights from Observations and MHD Simulation"
-2024arXiv241200641V,%Vachaspati+Brandenburg "Spectra of magnetic fields from electroweak symmetry breaking"
 2024arXiv241112953Z,%Zhou+Lai "Understanding the UV/Optical Variability of AGNs through Quasi-Periodic Large-scale Magnetic Dynamos"
 2024PhFl...36k5152L,%Lipatnikov "A priori assessment of a simple approach to evaluating burning rate in large eddy simulations of premixed turbulent combustion"
 2024ApJ...975..251V,%Vemareddy "Simulating the formation and eruption of flux rope by magneto-friction model driven by time-dependent electric fields"
@@ -285,10 +287,9 @@ BB24,
 Karchniwy_etal_2022%Karchniwy+ "A numerical study on the combustion of a resolved carbon particle"
 },\item
 \item %YEAR
-48 times in 2021 \citep{
+47 times in 2021 \citep{
 2021A&A...655A..79B,%Barekat+ "Generation of mean flows in rotating anisotropic turbulence: The case of solar near-surface shear layer"
 2021MNRAS.508.5538Y,%Yang+Zhu "Streaming instability with multiple dust species - II. Turbulence and dust-gas dynamics at non-linear saturation"
-2021arXiv211201193C,%Candelaresi+Del Sordo "Stability of plasmas through magnetic helicity"
 2021A&A...655A..78K,%Kapyla "Prandtl number dependence of stellar convection: Flow statistics and convective energy transport"
 2022PhRvL.128v1301K,%Kahniashvili+ "Big Bang Nucleosynthesis Limits and Relic Gravitational Waves Detection Prospects"
 2021MNRAS.tmp.2879B,%Bhat "Saturation of large-scale dynamo in anisotropically forced turbulence"
@@ -952,6 +953,7 @@ The {\sc Pencil Code} has been used for the following research topics
 \begin{enumerate}
 \item
 {\em Interstellar and intercluster medium} \citep{
+2024GMS...283..179C,%Candelaresi+Del Sordo "Stability of plasmas through magnetic helicity"
 2024LRCA...10....3K,%Korpi-Lagg+ "Computational approaches to modeling dynamos in galaxies"
 2024A&A...690A..77E,%Elias-Lopez+ "Vorticity and magnetic dynamo from subsonic expansion waves II: Dependence on magnetic Prandtl number, forcing scale, cooling time"
 2023A&A...677A..46E,%Elias-Lopez+ "Vorticity and magnetic dynamo from subsonic expansion waves"
@@ -961,7 +963,6 @@ The {\sc Pencil Code} has been used for the following research topics
 2021arXiv210801936M,%Maiti+ "Cosmic ray Transport in Magnetohydrodynamic turbulence"
 2021ApJ...910L..15G,%Gent+ "Small-scale Dynamo in Supernova-driven Interstellar Turbulence"
 2021A&A...648A..52L,%Li+Mattsson "Coagulation of inertial particles in supersonic turbulence"
-2021arXiv211201193C,%Candelaresi+Del Sordo "Stability of plasmas through magnetic helicity"
 2020ApJ...896...86C,%Candelaresi+Del Sordo "Stabilizing Effect of Magnetic Helicity on Magnetic Cavities in the Intergalactic Medium
 2020ApJ...903..148L,%Li+Mattsson "Dust growth by accretion of molecules in supersonic interstellar turbulence"
 2020MNRAS.496.4749B,%Brandenburg+Furuya "Application of a helicity proxy to edge-on galaxies"
@@ -1001,6 +1002,7 @@ The {\sc Pencil Code} has been used for the following research topics
 
 \item % r e c o n  &  S S d y n
 {\em Small-scale dynamos and reconnection} \citep{
+2025arXiv250721832K,%Koshikumo+ "Magnetic flux transport via reconnection diffusion in different sonic regimes of interstellar MHD turbulence"
 2025arXiv250217178K,%Kishore+Singh "Rotational effects on the small-scale dynamo"
 2025arXiv250502885B,%Brandenburg+Ntormousi "Magnetic field amplification during a turbulent collapse"
 2025A&A...696A..93W,%Warnecke+ "Small-scale and large-scale dynamos in global convection simulations of solar-like stars"
@@ -1042,7 +1044,7 @@ The {\sc Pencil Code} has been used for the following research topics
 \item %p r i m o r d i a l,   d e c a y i n g,  c o s m o
 {\em Primordial magnetic fields and decaying turbulence} \citep{
 2025A&A...694A..39D,%Dehman+Brandenburg "Reality of Inverse Cascading in Neutron Star Crusts"
-2024arXiv241200641V,%Vachaspati+Brandenburg "Spectra of magnetic fields from electroweak symmetry breaking"
+2025PhRvD.111d3541V,%Vachaspati+Brandenburg "Spectra of magnetic fields from electroweak symmetry breaking"
 2024arXiv240611798B,%Brandenburg+Banerjee "Turbulent magnetic decay controlled by two conserved quantities"
 2024OJAp....7E..75D,%Dwivedi+ "Quasi-two-dimensionality of three-dimensional, magnetically dominated, decaying turbulence"
 2024A&A...687A.186B,%Brandenburg+ "Resistively controlled primordial magnetic turbulence decay"
@@ -1795,6 +1797,8 @@ Zhang_etal_2020comb,%Zhang+ "Drag force for a burning particle"
 The {\sc Pencil Code} has been quoted in other papers either for
 detailed code comparison, in connection with related work,
 or in comparison with other codes \citep{
+2025arXiv250708436L,%Lebreuilly+ "The Rosetta Stone Project. I. A suite of radiative magnetohydrodynamics simulations of high-mass star-forming clumps"
+2025arXiv250800694A,%Abramson+ "Forward cascade of large-scale primordial magnetic fields during structure formation"
 2025ApJS..279....6H,%Hunana "Generalized Fluid Models of the Braginskii Type. II. The Boltzmann Operator"
 2025arXiv250708436L,%Lebreuilly+ "The Rosetta Stone Project. I. A suite of radiative magnetohydrodynamics simulations of high-mass star-forming clumps"
 2025arXiv250319131I,%Irshad "Turbulent dynamos in a collapsing cloud"
