--- a/doc/citations/ref.bib
+++ b/doc/citations/ref.bib
@@ -15918,20 +15918,22 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2024arXiv241200641V,
+@ARTICLE{2025PhRvD.111d3541V,
        author = {{Vachaspati}, Tanmay and {Brandenburg}, Axel},
         title = "{Spectra of magnetic fields from electroweak symmetry breaking}",
-      journal = {arXiv e-prints},
-     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, High Energy Physics - Phenomenology},
-         year = 2024,
-        month = nov,
-          eid = {arXiv:2412.00641},
-        pages = {arXiv:2412.00641},
-          doi = {10.48550/arXiv.2412.00641},
+      journal = {\prd},
+     keywords = {Cosmology, Astrophysics - Cosmology and Nongalactic Astrophysics, High Energy Physics - Phenomenology},
+         year = 2025,
+        month = feb,
+       volume = {111},
+       number = {4},
+          eid = {043541},
+        pages = {043541},
+          doi = {10.1103/PhysRevD.111.043541},
 archivePrefix = {arXiv},
        eprint = {2412.00641},
  primaryClass = {astro-ph.CO},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv241200641V},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025PhRvD.111d3541V},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -16319,9 +16321,9 @@ archivePrefix = {arXiv},
 @INPROCEEDINGS{2025AAS...24540206M,
        author = {{Meftah}, John},
         title = "{Hydrodynamic simulations of multiple low-mass migrating black holes in AGN disks}",
-    booktitle = {American Astronomical Society Meeting Abstracts},
+    booktitle = {Am. Astron. Soc. Meet. Abstr.},
          year = 2025,
-       series = {American Astronomical Society Meeting Abstracts},
+       series = {Am. Astron. Soc. Meet. Abstr.},
        volume = {245},
         month = jan,
           eid = {402.06},
@@ -16810,7 +16812,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2025PhFl...37g5107S,
        author = {{Sabelnikov}, Vladimir A. and {Nishiki}, Shinnosike and {Lipatnikov}, Andrei N.},
         title = "{A priori assessment of gradient models of joint cumulants for large eddy simulations of premixed turbulent flames}",
-      journal = {Physics of Fluids},
+      journal = {Phys. Fluids},
      keywords = {Turbulent Flows},
          year = 2025,
         month = jul,
@@ -16830,6 +16832,7 @@ archivePrefix = {arXiv},
      keywords = {Cosmology and Nongalactic Astrophysics, Computational Physics},
          year = 2025,
         month = jul,
+        pages = {10.1093/mnras/staf1180},
           doi = {10.1093/mnras/staf1180},
 archivePrefix = {arXiv},
        eprint = {2505.13305},
@@ -16923,6 +16926,58 @@ archivePrefix = {arXiv},
        eprint = {2506.10435},
  primaryClass = {astro-ph.EP},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250610435G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv250721832K,
+       author = {{Koshikumo}, C.~N. and {Santos-Lima}, R. and {del Valle}, M.~V. and {de Gouveia Dal Pino}, E.~M. and {Guerrero}, G. and {Lazarian}, A.},
+        title = "{Magnetic flux transport via reconnection diffusion in different sonic regimes of interstellar MHD turbulence}",
+      journal = {arXiv e-prints},
+     keywords = {High Energy Astrophysical Phenomena, Astrophysics of Galaxies, Solar and Stellar Astrophysics},
+         year = 2025,
+        month = jul,
+          eid = {arXiv:2507.21832},
+        pages = {arXiv:2507.21832},
+          doi = {10.48550/arXiv.2507.21832},
+archivePrefix = {arXiv},
+       eprint = {2507.21832},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250721832K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2024GMS...283..179C,
+       author = {{Candelaresi}, Simon and {Del Sordo}, Fabio},
+        title = "{Stability of Plasmas Through Magnetic Helicity}",
+     keywords = {Physics - Plasma Physics, Astrophysics - Astrophysics of Galaxies, Astrophysics - Solar and Stellar Astrophysics, Physics - Space Physics},
+    booktitle = {Helicities in Geophysics, Astrophysics, and Beyond},
+         year = 2024,
+       editor = {{Kuzanyan}, Kirill and {Yokoi}, Nobumitsu and {Georgoulis}, Manolis K. and {Stepanov}, Rodion},
+       volume = {283},
+        month = jan,
+        pages = {179-188},
+          doi = {10.1002/9781119841715.ch12},
+archivePrefix = {arXiv},
+       eprint = {2112.01193},
+ primaryClass = {physics.plasm-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024GMS...283..179C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv250800694A,
+       author = {{Abramson}, Molly and {Clarke}, Emma and {Kahniashvili}, Tina and {Mandal}, Sayan and {Mtchedlidze}, Salome and {Schober}, Jennifer},
+        title = "{Forward cascade of large-scale primordial magnetic fields during structure formation}",
+      journal = {arXiv e-prints},
+     keywords = {Cosmology and Nongalactic Astrophysics, Astrophysics of Galaxies, High Energy Physics - Phenomenology},
+         year = 2025,
+        month = aug,
+          eid = {arXiv:2508.00694},
+        pages = {arXiv:2508.00694},
+          doi = {10.48550/arXiv.2508.00694},
+archivePrefix = {arXiv},
+       eprint = {2508.00694},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250800694A},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
