current version; message generated automatically on: Linux norlx65 (brandenb)

--- a/doc/citations/notes.tex
+++ b/doc/citations/notes.tex
@@ -130,17 +130,17 @@ In addition, 138 papers reference it for code comparison or other purposes %(202
 2025PhRvD.111d3541V,%Vachaspati+Brandenburg "Spectra of magnetic fields from electroweak symmetry breaking"
 2025arXiv250610435G,%Godines+ "On the Mass Budget Problem of Protoplanetary Disks: Streaming Instability and Optically Thick Emission"
 2025arXiv250620538I,%Iarygina+ "Schwinger effect in axion inflation on a lattice"
-2025arXiv250621517S,%Srivastava+ "The Relation between Solar Spicules and Magnetohydrodynamic Shocks"
+2025ApJ...989...39S,%Srivastava+ "The Relation between Solar Spicules and Magnetohydrodynamic Shocks"
 2025A&A...699A.250H,%Hidalgo+ "Shaping core dynamos in A-type stars: The role of dipolar fossil fields"
-2025MNRAS.tmp.1134S,%Shchutskyi+ "Kinematic dynamos and resolution limits for Smoothed Particle Magnetohydrodynamics"
+2025MNRAS.541.3427S,%Shchutskyi+ "Kinematic dynamos and resolution limits for Smoothed Particle Magnetohydrodynamics"
 2025PhFl...37g5107S,%Sabelnikov+ "A priori assessment of gradient models of joint cumulants for large eddy simulations of premixed turbulent flames"
 2025ApJ...979L..39T,%Tschernitz+Bourdin "Granulation and Convectional Driving on Stellar Surfaces"
 2025JPlPh..91E..35H,%Hosking+ "Metastability of stratified magnetohydrostatic equilibria and their relaxation"
 2025CoFl..27313903Y,%Yuvraj+ "How ``mixing'' affects propagation and structure of intensely turbulent, lean, hydrogen-air premixed flames"
-2025arXiv250303332K,%Kishore+Singh "The spectra of solar magnetic energy and helicity"
+2025ApJ...986..183K,%Kishore+Singh "The spectra of solar magnetic energy and helicity"
 2025A&A...696A..93W,%Warnecke+ "Small-scale and large-scale dynamos in global convection simulations of solar-like stars"
 2025ApJ...983..105B,%Brandenburg+Scannapieco "Magnetically Assisted Vorticity Production in Decaying Acoustic Turbulence"
-2025arXiv250400738K,%Kapyla "Simulations of entropy rain-driven convection"
+2025A&A...698L..13K,%Kapyla "Simulations of entropy rain-driven convection"
 2025arXiv250416849B,%Brandenburg "Magnetorotational instability in a solar mean-field dynamo"
 2025ApJ...984...78B,%Brandenburg+Vishniac "Magnetic helicity fluxes in dynamos from rotating inhomogeneous turbulence"
 2025ApJ...984..113S,%Singh+Arunima "Reversals of toroidal magnetic field in local shearing box simulations of accretion disc with a hot corona"
@@ -149,14 +149,13 @@ In addition, 138 papers reference it for code comparison or other purposes %(202
 2025JCAP...05..079S,%Sharma+ "Lattice simulations of axion-U(1) inflation: gravitational waves, magnetic fields, and black holes"
 2025arXiv250502885B,%Brandenburg+Ntormousi "Magnetic field amplification during a turbulent collapse"
 2025arXiv250503660M,%Mondal+ "Understanding large-scale dynamos in unstratified rotating shear flows"
-2025arXiv250513305S,%Shchutskyi+ "Kinematic dynamos and resolution limits for Smoothed Particle Magnetohydrodynamics"
 2025MNRAS.539.3421R,%Rice+ "Dust density enhancements and the direct formation of planetary cores in gravitationally unstable discs"
 2025MNRAS.540..532Q,%Qazi "Non-linear magnetic buoyancy instability and galactic dynamos"
 2025A&A...693A..89P,%Pandey+Bourdin "Investigating numerical stability by scaling heat conduction in a 1D hydrodynamic model of the solar atmosphere"
 2025AAS...24540206M,%Meftah "Hydrodynamic simulations of multiple low-mass migrating black holes in AGN disks"
 2025PhRvD.111b3021P,%Park "Effect of turbulent kinetic helicity on diffusive beta effect for large scale dynamo"
 2025arXiv250105732R,%Roper Pol+Salvino Midiri "Relativistic magnetohydrodynamics in the early Universe"
-2025arXiv250112200B,%Brandenburg+Yi+Wu "Inverse cascade from helical and nonhelical decaying columnar magnetic fields"
+2025JPlPh..91E.113B,%Brandenburg+Yi+Wu "Inverse cascade from helical and nonhelical decaying columnar magnetic fields"
 2025MNRAS.537L..26E,%Eriksson+ "Particle fragmentation inside planet-induced spiral waves"
 2025A&A...694A..39D,%Dehman+Brandenburg "Reality of Inverse Cascading in Neutron Star Crusts"
 2025MNRAS.536.1625S%Shi+ "Kinetic field theory applied to planetesimal formation I: freely streaming dust particles"
@@ -1314,9 +1313,9 @@ The {\sc Pencil Code} has been used for the following research topics
 \begin{enumerate}
 \item % c o r
 {\em Coronal heating and coronal mass ejections} \citep{
-2025arXiv250621517S,%Srivastava+ "The Relation between Solar Spicules and Magnetohydrodynamic Shocks"
+2025ApJ...989...39S,%Srivastava+ "The Relation between Solar Spicules and Magnetohydrodynamic Shocks"
 2025arXiv250217178K,%Kishore+Singh "Rotational effects on the small-scale dynamo"
-2025arXiv250303332K,%Kishore+Singh "The spectra of solar magnetic energy and helicity"
+2025ApJ...986..183K,%Kishore+Singh "The spectra of solar magnetic energy and helicity"
 2025ApJ...984..113S,%Singh+Arunima "Reversals of toroidal magnetic field in local shearing box simulations of accretion disc with a hot corona"
 2024ApJ...975..251V,%Vemareddy "Simulating the formation and eruption of flux rope by magneto-friction model driven by time-dependent electric fields"
 2024ApJ...973...49K,%Kesri+ "Dependence of spicule properties on magnetic field -- results from Magnetohydrodynamics simulations"
@@ -1372,13 +1371,12 @@ The {\sc Pencil Code} has been used for the following research topics
 
 \item %h e l
 {\em Large-scale dynamos, helical turbulence, and catastrophic quenching} \citep{
-2025MNRAS.tmp.1134S,%Shchutskyi+ "Kinematic dynamos and resolution limits for Smoothed Particle Magnetohydrodynamics"
+2025MNRAS.541.3427S,%Shchutskyi+ "Kinematic dynamos and resolution limits for Smoothed Particle Magnetohydrodynamics"
 2025arXiv250416849B,%Brandenburg "Magnetorotational instability in a solar mean-field dynamo"
 2025ApJ...984...78B,%Brandenburg+Vishniac "Magnetic helicity fluxes in dynamos from rotating inhomogeneous turbulence"
 2025ApJ...985...18R,%Rogachevskii+ "Theory of the Kinetic Helicity Effect on Turbulent Diffusion of Magnetic and Scalar Fields"
 2025ApJ...984...88B,%Brandenburg+ "Helicity Effect on Turbulent Passive and Active Scalar Diffusivities"
 2025arXiv250503660M,%Mondal+ "Understanding large-scale dynamos in unstratified rotating shear flows"
-2025arXiv250513305S,%Shchutskyi+ "Kinematic dynamos and resolution limits for Smoothed Particle Magnetohydrodynamics"
 2025A&A...699A.250H,%Hidalgo+ "Shaping core dynamos in A-type stars: The role of dipolar fossil fields"
 2024arXiv241112953Z,%Zhou+Lai "Understanding the UV/Optical Variability of AGNs through Quasi-Periodic Large-scale Magnetic Dynamos"
 2024SoPh..299..115V,%Vashishth "Hysteresis Near the Transition of the Large-Scale Dynamo in the Presence of the Small-Scale Dynamo"
@@ -1538,7 +1536,7 @@ The {\sc Pencil Code} has been used for the following research topics
 
 \item %c o n v e c t i o n
 {\em Convection in Cartesian domains} \citep{
-2025arXiv250400738K,%Kapyla "Simulations of entropy rain-driven convection"
+2025A&A...698L..13K,%Kapyla "Simulations of entropy rain-driven convection"
 2025A&A...693A..89P,%Pandey+Bourdin "Investigating numerical stability by scaling heat conduction in a 1D hydrodynamic model of the solar atmosphere"
 2025JPlPh..91E..35H,%Hosking+ "Metastability of stratified magnetohydrostatic equilibria and their relaxation"
 2024A&A...683A.221K,%K{\"a}pyl{\"a}} "Convective scale and subadiabatic layers in simulations of rotating compressible convection"
@@ -1731,7 +1729,7 @@ Peng2019HelicityHT,%Peng+ "Helicity hardens the gas"
 2025ApJ...983..105B,%Brandenburg+Scannapieco "Magnetically Assisted Vorticity Production in Decaying Acoustic Turbulence"
 2025PhRvD.111b3021P,%Park "Effect of turbulent kinetic helicity on diffusive beta effect for large scale dynamo"
 2025arXiv250105732R,%Roper Pol+Salvino Midiri "Relativistic magnetohydrodynamics in the early Universe"
-2025arXiv250112200B,%Brandenburg+Yi+Wu "Inverse cascade from helical and nonhelical decaying columnar magnetic fields"
+2025JPlPh..91E.113B,%Brandenburg+Yi+Wu "Inverse cascade from helical and nonhelical decaying columnar magnetic fields"
 2023MNRAS.518.3312B,%Brandenburg+ "Batchelor, Saffman, and Kazantsev spectra in galactic small-scale dynamos"
 2020ApJ...892...80B,%Brandenburg+Boldyrev "The Turbulent Stress Spectrum in the Inertial and Subinertial Ranges"
 2017JFM...824..785A,% Aiyer+Subramanian "Passive scalar mixing and decay at finite correlation times in the Batchelor regime"
@@ -1803,9 +1801,8 @@ or in comparison with other codes \citep{
 2025arXiv250708436L,%Lebreuilly+ "The Rosetta Stone Project. I. A suite of radiative magnetohydrodynamics simulations of high-mass star-forming clumps"
 2025arXiv250319131I,%Irshad "Turbulent dynamos in a collapsing cloud"
 2025ApJS..277...46S,%Son+ "A Comparative Analysis of High-resolution Shock-capturing Schemes for Two-dimensional Magnetohydrodynamic Simulation of Flux Emergence in the Solar Atmosphere"
-2025JApA...46...28S,%Sharma+ "Computational astrophysics, data science and AI/ML in astronomy: A perspective from Indian community"
+2025JApA...46...28S,%Sharma+ "Computational Astrophysics, Data Science \& AI/ML in Astronomy: A Perspective from Indian Community"
 2025CoPhC.30609364Y,%Yeung "GPU-enabled extreme-scale turbulence simulations: Fourier pseudo-spectral algorithms at the exascale using OpenMP offloading"
-2025arXiv250103876S,%Sharma+ "Computational Astrophysics, Data Science \& AI/ML in Astronomy: A Perspective from Indian Community"
 2025ApJ...978...72Z,%Zhou+ "Frozen-field Modeling of Coronal Condensations with MPI-AMRVAC II: Optimization and application in three-dimensional models"
 2025ApJ...981..160L,%Lim+ "Probing Conditions for Strong Clumping by the Streaming Instability: Small Dust Grains and Low Dust-to-gas Density Ratio"
 2024arXiv241021568S,%Schad+ "Mapping the Sun's coronal magnetic field using the Zeeman effect"
