--- a/doc/citations/ref.bib
+++ b/doc/citations/ref.bib
@@ -16981,3 +16981,97 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{2025ApJ...986..183K,
+       author = {{Kishore}, G. and {Singh}, Nishant K.},
+        title = "{The Spectra of Solar Magnetic Energy and Helicity}",
+      journal = {\apj},
+     keywords = {Solar magnetic fields, Solar cycle, Observational astronomy, 1503, 1487, 1145, Solar and Stellar Astrophysics},
+         year = 2025,
+        month = jun,
+       volume = {986},
+       number = {2},
+          eid = {183},
+        pages = {183},
+          doi = {10.3847/1538-4357/add692},
+archivePrefix = {arXiv},
+       eprint = {2503.03332},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJ...986..183K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025JPlPh..91E.113B,
+       author = {{Brandenburg}, Axel and {Yi}, Longqing and {Wu}, Xianshu},
+        title = "{Inverse cascade from helical and non-helical decaying columnar magnetic fields}",
+      journal = {J. Plasma Phys.},
+     keywords = {astrophysical plasmas, Plasma Physics, Cosmology and Nongalactic Astrophysics},
+         year = 2025,
+        month = aug,
+       volume = {91},
+       number = {4},
+          eid = {E113},
+        pages = {E113},
+          doi = {10.1017/S0022377825100664},
+archivePrefix = {arXiv},
+       eprint = {2501.12200},
+ primaryClass = {physics.plasm-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025JPlPh..91E.113B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025ApJ...989...39S,
+       author = {{Srivastava}, Sankalp and {Chatterjee}, Piyali and {Dey}, Sahel and {Erd{\'e}lyi}, Robertus},
+        title = "{The Relation between Solar Spicules and Magnetohydrodynamic Shocks}",
+      journal = {\apj},
+     keywords = {Shocks, Radiative magnetohydrodynamics, Magnetohydrodynamical simulations, Solar spicules, Solar chromosphere, Solar transition region, Solar corona, Solar atmosphere, Solar magnetic fields, Solar physics, 2086, 2009, 1966, 1525, 1479, 1532, 1483, 1477, 1503, 1476, Solar and Stellar Astrophysics},
+         year = 2025,
+        month = aug,
+       volume = {989},
+       number = {1},
+          eid = {39},
+        pages = {39},
+          doi = {10.3847/1538-4357/ade9b4},
+archivePrefix = {arXiv},
+       eprint = {2506.21517},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJ...989...39S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025A&A...698L..13K,
+       author = {{K{\"a}pyl{\"a}}, P.~J.},
+        title = "{Simulations of entropy rain-driven convection}",
+      journal = {\aap},
+     keywords = {convection, turbulence, Sun: interior, Solar and Stellar Astrophysics, Fluid Dynamics},
+         year = 2025,
+        month = jun,
+       volume = {698},
+          eid = {L13},
+        pages = {L13},
+          doi = {10.1051/0004-6361/202554952},
+archivePrefix = {arXiv},
+       eprint = {2504.00738},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025A&A...698L..13K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025MNRAS.541.3427S,
+       author = {{Shchutskyi}, Nikyta and {Schaller}, Matthieu and {Karapiperis}, Orestis A. and {Stasyszyn}, Federico A. and {Brandenburg}, Axel},
+        title = "{Kinematic dynamos and resolution limits for smoothed particle magnetohydrodynamics}",
+      journal = {\mnras},
+     keywords = {dynamo, MHD, methods: numerical, cosmology: theory, Cosmology and Nongalactic Astrophysics, Computational Physics},
+         year = 2025,
+        month = aug,
+       volume = {541},
+       number = {4},
+        pages = {3427-3444},
+          doi = {10.1093/mnras/staf1180},
+archivePrefix = {arXiv},
+       eprint = {2505.13305},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025MNRAS.541.3427S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
