mark sample as succeeding
samples/1d-tests/conduction/cT1_readstrat

--- a/samples/1d-tests/conduction/cT1_readstrat/README
+++ b/samples/1d-tests/conduction/cT1_readstrat/README
@@ -7,9 +7,7 @@ Maintainer:
 Added:
     04-Sep-2025
 Status:
-    failing # One of [succeeds|failing since <date>|obsolete| ...]
+    succeeds # One of [succeeds|failing since <date>|obsolete| ...]
 Comments:
     1D run with just thermal conduction; the thermal conductivity is a prescribed profile.
     This sample tests reading initial conditions from a stratification.dat file with strati_type='lnrho_ss'
-    
-    Fails because cs2top, cs2bot are not set in the 'stratification' initial condition.
